--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,16 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 <junit.version>5.10.0</junit.version>  </properties>
 
-  <dependencies>
+
+    <repositories>
+        <repository>
+            <id>clojars-repo</id>
+            <url>https://clojars.org/repo/</url>
+        </repository>
+    </repositories>
+
+
+    <dependencies>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
@@ -54,22 +63,27 @@
       <artifactId>poi-ooxml</artifactId>
       <version>4.1.2</version>
     </dependency>
-    <dependency>
-      <groupId>net.sf.ucanaccess</groupId>
-      <artifactId>ucanaccess</artifactId>
-      <version>5.0.1</version>
-    </dependency>
-    <dependency>
+        <!-- https://mvnrepository.com/artifact/net.sf.ucanaccess/ucanaccess -->
+        <dependency>
+            <groupId>net.sf.ucanaccess</groupId>
+            <artifactId>ucanaccess</artifactId>
+            <version>5.0.1</version>
+        </dependency>
+
+        <dependency>
       <groupId>net.sf.opencsv</groupId>
       <artifactId>opencsv</artifactId>
       <version>2.3</version>
     </dependency>
-    <dependency>
-      <groupId>net.sf.jxls</groupId>
-      <artifactId>jxls</artifactId>
-      <version>1.0.2</version>
-    </dependency>
-    <dependency>
+        <!-- https://mvnrepository.com/artifact/net.sf.jxls/jxls -->
+        <dependency>
+            <groupId>net.sf.jxls</groupId>
+            <artifactId>jxls</artifactId>
+            <version>1.0.2</version>
+            <type>pom</type>
+        </dependency>
+
+        <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
@@ -82,10 +96,18 @@
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>2.6.1</version>
+      <version>2.7.1</version>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/com.healthmarketscience/jackcess -->
+        <dependency>
+            <groupId>com.healthmarketscience</groupId>
+            <artifactId>jackcess</artifactId>
+            <version>1.2.4</version>
+        </dependency>
 
-  </dependencies>
+
+
+    </dependencies>
 
 
   <build>
