--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,15 @@
 
 
 
+
+        <!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.21.3</version>
+        </dependency>
+
+
     </dependencies>
 
 
